feat: add get products endpoint
