# docs/swagger.yaml
@@ -276,6 +276,30 @@ paths:
       summary: Get all orders from a store
       tags:
       - dashboard
+  /dashboard/products:
+    get:
+      consumes:
+      - application/json
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/GetStoreProduct'
+            type: array
+        "400":
+          description: Bad Request
+          schema: {}
+        "500":
+          description: Internal Server Error
+          schema: {}
+      security:
+      - Auth0Token: []
+      summary: Get all products from a store
+      tags:
+      - dashboard
   /orders:
     get:
       consumes:
